@@ -1,7 +1,11 @@
+Mon Dec 28 22:01:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
+
+	* test/ruby/test_marshal.rb: added tests for taintness propagation.
+
 Thu Dec 24 12:08:00 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
-  * lib/delegate.rb (marshal_dump/load): dump & load instance variables
-    by default [ruby-core:24211]
+	* lib/delegate.rb (marshal_dump/load): dump & load instance variables
+	  by default [ruby-core:24211]
 
 Wed Dec 23 20:48:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
